--- a/hw5.ipynb
+++ b/hw5.ipynb
@@ -47,11 +47,8 @@
         "import pyspark.sql.functions as F\n",
         "from pyspark.ml.feature import HashingTF, IDF, Tokenizer, Word2Vec\n",
         "from pyspark.ml.pipeline import Pipeline\n",
-        "from pyspark.ml.classification import FMClassifier\n",
-        "from pyspark.ml.classification import LinearSVC\n",
-        "from pyspark.ml.classification import NaiveBayes\n",
-        "from pyspark.ml.classification import LogisticRegression\n",
-        "from pyspark.ml.evaluation import BinaryClassificationEvaluator, MultilabelClassificationEvaluator\n",
+        "from pyspark.ml.classification import NaiveBayes, LogisticRegression\n",
+        "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
         "import tqdm\n",
         "import pandas as pd"
       ]
